test-echo-output/src/snapshots/test_echo_output__generated_tests__echo_float.snap
---
source: test-echo-output/src/generated_tests.rs
expression: "./cases/echo_float"
---
--- CODE
pub fn main() {
  echo 1.0
  echo 2.1
  echo 11.11
}

--- OUTPUT ON ERLANG TARGET
1.0
2.1
11.11

--- OUTPUT ON JAVASCRIPT TARGET
1
2.1
11.11
