test-echo-output/src/snapshots/test_echo_output__generated_tests__echo_importing_module_named_inspect.snap
---
source: test-echo-output/src/generated_tests.rs
expression: "./cases/echo_importing_module_named_inspect"
---
--- CODE
import inspect

pub fn main() {
  echo inspect.x
}

--- OUTPUT ON ERLANG TARGET
Nil

--- OUTPUT ON JAVASCRIPT TARGET
Nil
