test-echo-output/src/snapshots/test_echo_output__generated_tests__echo_list.snap
---
source: test-echo-output/src/generated_tests.rs
expression: "./cases/echo_list"
---
--- CODE
pub fn main() {
  echo []
  echo [1, 2, 3]
}

--- OUTPUT ON ERLANG TARGET
[]
[1, 2, 3]

--- OUTPUT ON JAVASCRIPT TARGET
[]
[1, 2, 3]
