test-echo-output/src/snapshots/test_echo_output__generated_tests__echo_tuple.snap
---
source: test-echo-output/src/generated_tests.rs
expression: "./cases/echo_tuple"
---
--- CODE
pub fn main() {
  echo #()
  echo #(True, 1, "hello")
  target_specific()
}

@target(erlang)
pub type Wibble {
  Wibble
}

@target(erlang)
pub fn target_specific() {
  // On erlang a tuple with an enum variant as the first item is printed as a
  // type with fields.
  echo #(Wibble, 1, "hello")
}

@target(javascript)
pub fn target_specific() {
  Nil
}

--- OUTPUT ON ERLANG TARGET
#()
#(True, 1, "hello")
Wibble(1, "hello")

--- OUTPUT ON JAVASCRIPT TARGET
#()
#(True, 1, "hello")
